update accounts when transfer happens

--- a/src/resources/language_ca.properties
+++ b/src/resources/language_ca.properties
@@ -22,3 +22,5 @@ login = Logueja't
 Accounts = Comptes
 add.an.account = afegeix un compte corrent nou
 iban24 = iban (24 caràcters)
+Transactions = Transaccions
+new.transaction = nova transació
