--- a/src/resources/language_es.properties
+++ b/src/resources/language_es.properties
@@ -22,3 +22,5 @@ login = Loguéate
 Accounts = Cuentas
 add.an.account = añade una cuenta corriente nueva
 iban24 = iban (24 carácteres)
+Transactions = Transacciones
+new.transaction = nueva transacción
