--- a/src/resources/language_ca.properties
+++ b/src/resources/language_ca.properties
@@ -19,7 +19,10 @@ personal.id =  dni/nie
 please.log.in = Sisplau, logueja't
 remember.me = recorda'm
 login = Logueja't
+amount = quantitat
 Accounts = Comptes
+accounts = comptes
+into.account = al compte IBAN:
 add.an.account = afegeix un compte corrent nou
 iban24 = iban (24 caràcters)
 Transactions = Transaccions
