--- a/src/resources/language_es.properties
+++ b/src/resources/language_es.properties
@@ -19,7 +19,10 @@ personal.id =  dni/nie
 please.log.in = Por favor, loguéate
 remember.me = recuérdame
 login = Loguéate
+amount = cantidad
 Accounts = Cuentas
+accounts = accounts
+into.account = en la cuenta IBAN:
 add.an.account = añade una cuenta corriente nueva
 iban24 = iban (24 carácteres)
 Transactions = Transacciones
