--- a/src/resources/language_ca.properties
+++ b/src/resources/language_ca.properties
@@ -27,3 +27,4 @@ add.an.account = afegeix un compte corrent nou
 iban24 = iban (24 caràcters)
 Transactions = Transaccions
 new.transaction = nova transació
+Transactions.per.page = transaccions per pàgina
