--- a/src/resources/language_es.properties
+++ b/src/resources/language_es.properties
@@ -27,3 +27,4 @@ add.an.account = añade una cuenta corriente nueva
 iban24 = iban (24 carácteres)
 Transactions = Transacciones
 new.transaction = nueva transacción
+Transactions.per.page = transacciones por página
